samples/_failures_safe/1761465953_c5e75a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24701d43.c: In function ‘main’:
./samples/SAFE/__tmp_24701d43.c:177:5: error: expected ‘,’ or ‘;’ at end of input
  177 |     size_t len = strlen
      |     ^~~~~~
./samples/SAFE/__tmp_24701d43.c:177:5: error: expected declaration or statement at end of input
